[package]
name = "s21_hijack"
version = "0.1.0"
edition = "2024"
description = "DiGiCo S21/S31 snapshot manager daemon"

[dependencies]
tokio = { version = "1", features = ["full"] }
rosc = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
eframe = "0.33"
egui_extras = "0.33"
